# aivm

./: .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.rst  TODO.md  pyproject.toml  run_agentvm.sh  run_aivm.sh  run_docs.sh  run_doctests.sh  run_e2e_bootstrap_tests.sh  run_e2e_tests.sh  run_linter.sh  run_tests.py
.github/workflows/: release.yml  tests.yml
agent-memory/: architecture_overview.md
agent-memory/discovery/: 01_core_modules.md  02_vm_submodules.md  03_attachments_submodules.md  04_utility_modules.md
agentvm/: __init__.py  cli.py  config.py  detect.py  firewall.py  host.py  net.py  registry.py  util.py  vm.py
aivm/: __init__.py  __main__.py  cli.py  commands.py  config.py  config_review.py  detect.py  errors.py  fdguard.py  firewall.py  host.py  modes.py  net.py  persistent_replay.py  privilege.py  registry.py  resource_checks.py  results.py  runtime.py  services.py  status.py  store.py  util.py  vm.py  vm_lifecycle.py  vm_share.py  vm_sync.py  xmlutil.py
aivm/attachments/: __init__.py  guest.py  persistent.py  resolve.py  safety.py  session.py  shared_root.py
aivm/attachments/persistent/: __init__.py  host_bind.py  manifest.py  replay.py  transport.py
aivm/cli/: __init__.py  _common.py  _vm_compat.py  config.py  firewall.py  help.py  host.py  host_permissions.py  host_rootless.py  host_sudoless.py  main.py  net.py  vm.py  vm_attach.py  vm_cache.py  vm_config.py  vm_connect.py  vm_guard.py  vm_lifecycle.py  vm_update.py
aivm/cli/config/: __init__.py  discover.py  edit.py  editor.py  init.py  lint.py  paths.py  show.py
aivm/config_store/: __init__.py  io.py  models.py  mutate.py  parse.py  paths.py  render.py  resolve.py
aivm/ops/: __init__.py  vm_attach.py  vm_update.py
aivm/vm/: __init__.py  cloudinit.py  connectivity.py  create.py  create_ops.py  disk.py  domain.py  drift.py  guest_tools.py  host_access.py  images.py  lifecycle.py  paths.py  ports.py  provision.py  share.py  sync.py  update_ops.py  virtiofsd_wrapper.py
aivm/vm/update/: __init__.py  apply.py  detect.py  fdguard.py  models.py  render.py  restart.py  util.py  virtiofs.py
dev/: ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  refactor-plan-0.5.0.md
dev/design/future/: README.md  brainstorm.md  ci-e2e.md  cli-refactor.md  config-layout.md  config-refactor-plan.md  egress-allowlist.md  external-virtiofsd.md  flexible-folder-sharing.md  guest-os-abstraction.md  refactor-before-rootless.md  rootless-vms.md  snapshots-and-clones.md  virtiofsd-inode-file-handles.md  vm-attach-ops-refactor.md  vm-update-refactor.md
dev/devcheck/: guest-demo.txt  host-followups.txt  host-watch.txt  hostprobe.txt  virtiofsd_emfile_findings.md  virtiofsd_emfile_mwe.py  virtiofsd_filehandles_check.py  virtiofsd_host_followups.sh
dev/devcheck/virtiofsd-emfile/: case_report_2026_05_17.md  fd_postmortem.py  findings.md
dev/journals/: claude.md  codex.md  openai.md
docs/planning/candidate_ideas/: nft-nopasswd-sudoers.md
docs/planning/deferred/: session-runtime.md
docs/source/: alternatives.rst  conf.py  design.rst  index.rst  privilege-modes.rst  quickstart.rst  runtimes.rst  security.rst  virtiofs.rst  workflows.rst  wsl.rst
requirements/: docs.txt
requirements/locks/: tests-optional.txt  tests.txt
tests/: __init__.py  conftest.py  helpers.py  persistent_helpers.py  test_attachment_guest.py  test_attachment_paths.py  test_attachment_persistent.py  test_attachment_resolve.py  test_attachment_safety.py  test_attachment_session.py  test_attachment_session_restore.py  test_attachment_shared_root.py  test_cli_config_init.py  test_cli_config_lint.py  test_cli_dryrun.py  test_cli_helpers.py  test_cli_host_permissions.py  test_cli_host_sudoless.py  test_cli_status_helpers.py  test_cli_status_main.py  test_cli_vm_attach.py  test_cli_vm_code.py  test_cli_vm_create.py  test_cli_vm_detach.py  test_cli_vm_flush_caches.py  test_cli_vm_provision.py  test_cli_vm_update.py  test_cloud_init_uid_match.py  test_commands.py  test_config.py  test_detect.py  test_e2e_bootstrap_context.py  test_e2e_full.py  test_e2e_nested.py  test_e2e_session.py  test_e2e_sudoless.py  test_fdguard.py  test_firewall.py  test_host.py  test_image_fetch_failures.py  (+29 more)
tests/e2e/: __init__.py  _helpers.py  conftest.py  test_adopt.py  test_bootstrap_context.py  test_full.py  test_host_bind_probe.py  test_nested.py  test_privilege_never.py  test_sudoless.py
