[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvm"
version = "0.1.0"
description = "Local libvirt/KVM sandbox VM manager for coding agents (Ubuntu 24.04 cloud-image, SSH, optional virtiofs share, optional nftables isolation)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["kvm", "libvirt", "vm", "sandbox", "agents", "vscode", "ssh", "virtiofs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "loguru",
  "scriptconfig>=0.9.0",
  "ubelt",
]

[project.urls]
Homepage = "https://github.com/Erotemic/agentvm"

[[project.authors]]
name = "Jon Crall"
email = "erotemic@gmail.com"

[project.scripts]
agentvm = "agentvm.cli:main"
avm = "agentvm.cli:main"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "agentvm/__main__.py", "*/setup.py",]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [ "requirements/*.txt",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "agentvm*",]


[tool.xcookie]
tags = [ "github", "erotemic", "purepy",]
mod_name = "agentvm"
repo_name = "agentvm"
pkg_name = "agentvm"
rel_mod_parent_dpath = "."
os = [ "linux", "osx", "win",]
min_python = "3.11"
version = "0.0.1"
url = "https://github.com/Erotemic/agentvm"
author = "Jon Crall"
author_email = "erotemic@gmail.com"
description = "Local libvirt/KVM sandbox VM manager for coding agents (Ubuntu 24.04 cloud-image, SSH, optional virtiofs share, optional nftables isolation)."
license = "Apache 2"
dev_status = "planning"
remote_host = "github.com"
remote_group = "Erotemic"
use_setup_py = false
use_pyproject_requirements = true
