[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivm"
version = "0.1.0"
description = "Local libvirt/KVM sandbox VM manager for coding agents (Ubuntu 24.04 cloud-image, SSH, optional virtiofs share, optional nftables isolation)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["kvm", "libvirt", "vm", "sandbox", "agents", "vscode", "ssh", "virtiofs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "loguru",
  "scriptconfig>=0.9.0",
  "ubelt",
]

[project.urls]
Homepage = "https://github.com/Erotemic/aivm"

[[project.authors]]
name = "Jon Crall"
email = "erotemic@gmail.com"

[project.scripts]
aivm = "aivm.cli:main"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "aivm/__main__.py", "*/setup.py",]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [ "requirements/*.txt",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "aivm*",]


[tool.xcookie]
tags = [ "github", "erotemic", "purepy",]
mod_name = "aivm"
repo_name = "aivm"
pkg_name = "aivm"
rel_mod_parent_dpath = "."
os = [ "linux", "osx", "win",]
min_python = "3.11"
version = "0.0.1"
url = "https://github.com/Erotemic/aivm"
author = "Jon Crall"
author_email = "erotemic@gmail.com"
description = "Local libvirt/KVM sandbox VM manager for coding agents (Ubuntu 24.04 cloud-image, SSH, optional virtiofs share, optional nftables isolation)."
license = "Apache 2"
dev_status = "planning"
remote_host = "github.com"
remote_group = "Erotemic"
use_setup_py = false
use_pyproject_requirements = true


[tool.ruff]
line-length = 80
target-version = "py38"

[tool.ruff.lint]
# Enable Flake8 (E, F) and isort (I) rules.
select = ["E", "F", "I"]
# Ignore specific rules, for example, E501 (line too long) as it's handled by the formatter.
ignore = [
    "E501",  # line too long
    "E402",  # Module level import not at top of file
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
